Preserve profile selection diagnostic order